syntax = "proto3";
package image_block;
option go_package = "github.com/story-engine/main-service/proto/image_block";

import "google/protobuf/timestamp.proto";
import "proto/common/common.proto";

// ImageBlock represents an image block entity
message ImageBlock {
  string id = 1;
  optional string chapter_id = 2;
  optional int32 order_num = 3;
  string kind = 4; // final, alt_a, alt_b, draft, thumbnail
  string image_url = 5;
  optional string alt_text = 6;
  optional string caption = 7;
  optional int32 width = 8;
  optional int32 height = 9;
  google.protobuf.Timestamp created_at = 10;
  google.protobuf.Timestamp updated_at = 11;
}

// CreateImageBlockRequest is the request to create a new image block
message CreateImageBlockRequest {
  optional string chapter_id = 1;
  optional int32 order_num = 2;
  string kind = 3;
  string image_url = 4;
  optional string alt_text = 5;
  optional string caption = 6;
  optional int32 width = 7;
  optional int32 height = 8;
}

// CreateImageBlockResponse is the response after creating an image block
message CreateImageBlockResponse {
  ImageBlock image_block = 1;
}

// GetImageBlockRequest is the request to get an image block by ID
message GetImageBlockRequest {
  string id = 1;
}

// GetImageBlockResponse is the response containing an image block
message GetImageBlockResponse {
  ImageBlock image_block = 1;
}

// ListImageBlocksRequest is the request to list image blocks for a chapter
message ListImageBlocksRequest {
  optional string chapter_id = 1;
  common.PaginationRequest pagination = 2;
}

// ListImageBlocksResponse is the response containing a list of image blocks
message ListImageBlocksResponse {
  repeated ImageBlock image_blocks = 1;
  int32 total_count = 2;
}

// UpdateImageBlockRequest is the request to update an image block
message UpdateImageBlockRequest {
  string id = 1;
  optional string image_url = 2;
  optional string alt_text = 3;
  optional string caption = 4;
  optional int32 width = 5;
  optional int32 height = 6;
}

// UpdateImageBlockResponse is the response after updating an image block
message UpdateImageBlockResponse {
  ImageBlock image_block = 1;
}

// DeleteImageBlockRequest is the request to delete an image block
message DeleteImageBlockRequest {
  string id = 1;
}

// DeleteImageBlockResponse is the response after deleting an image block
message DeleteImageBlockResponse {
}

// ImageBlockService provides image block management operations
service ImageBlockService {
  // CreateImageBlock creates a new image block
  rpc CreateImageBlock(CreateImageBlockRequest) returns (CreateImageBlockResponse);
  // GetImageBlock retrieves an image block by ID
  rpc GetImageBlock(GetImageBlockRequest) returns (GetImageBlockResponse);
  // UpdateImageBlock updates an existing image block
  rpc UpdateImageBlock(UpdateImageBlockRequest) returns (UpdateImageBlockResponse);
  // ListImageBlocks lists image blocks with pagination
  rpc ListImageBlocks(ListImageBlocksRequest) returns (ListImageBlocksResponse);
  // DeleteImageBlock deletes an image block
  rpc DeleteImageBlock(DeleteImageBlockRequest) returns (DeleteImageBlockResponse);
}

